# RakNet

./: .gitignore  .gitmodules  3.x_to_4.x_upgrade.txt  CMakeLists.txt  LICENSE  PATENTS  README.md  RakNet_4.0_Eval_Clickthrough_1.1.doc  RakNet_NativeClient_VS2010.sln  RakNet_VS2008.sln  RakNet_WinPhone8_VS2012.sln  RakNet_WindowsStore8_VS2012.sln  readme.txt
DependentExtensions/: CMakeLists.txt  RakVoice.cpp  RakVoice.h  THIRDPARTYLICENSES
DependentExtensions/Autopatcher/: ApplyPatch.cpp  ApplyPatch.h  AutopatcherClient.cpp  AutopatcherClient.h  AutopatcherServer.cpp  AutopatcherServer.h  CMakeLists.txt  CreatePatch.cpp  CreatePatch.h  MemoryCompressor.cpp  MemoryCompressor.h
DependentExtensions/DXTCompressor/: DXTCompressor.sln  DXTCompressor.vcproj
DependentExtensions/GFx3/: FxGameDelegate.cpp  FxGameDelegate.h
DependentExtensions/IrrlichtDemo/: CDemo.cpp  CDemo.h  CMainMenu.cpp  CMainMenu.h  CMakeLists.txt  Irrlicht.exp  Irrlicht.lib  IrrlichtDemo.v8.vcproj  IrrlichtDemo.v8.vcxproj  IrrlichtDemo.v8.vcxproj.filters  RakNetStuff.cpp  RakNetStuff.h  demo.layout  main.cpp  readme.txt  resource.h  resscript.rc
DependentExtensions/Lobby2/: Lobby2Client.cpp  Lobby2Client.h  Lobby2Message.cpp  Lobby2Message.h  Lobby2Plugin.cpp  Lobby2Plugin.h  Lobby2Presence.cpp  Lobby2Presence.h  Lobby2ResultCode.cpp  Lobby2ResultCode.h  Lobby2Server.cpp  Lobby2Server.h
DependentExtensions/Marmalade/: RakNet.mkb  RakNet.mkf
DependentExtensions/MySQLInterface/: CMakeLists.txt  MySQLInterface.cpp  MySQLInterface.h
DependentExtensions/Ogre3DInterpDemo/: App3D.cpp  App3D.h  AppInterface.cpp  AppInterface.h  AppTypes.h  CMakeLists.txt  FSM.cpp  FSM.h  Ogre3DInterpDemo.vcproj  Ogre3DInterpDemo.vcxproj  Ogre3DInterpDemo.vcxproj.filters  OverlayHelper.cpp  OverlayHelper.h  Plugins.cfg  PluginsDebug.cfg  PluginsDebugL.cfg  PluginsL.cfg  RunnableState.cpp  RunnableState.h  State.cpp  State.h  TransformationHistory.cpp  TransformationHistory.h  WinMain.cpp  readme.txt  resources.cfg
DependentExtensions/PatchTest/: PatchTest.sln  PatchTest.vcproj  PatchTest_vc8.sln  PatchTest_vc9.vcproj  main.cpp
DependentExtensions/PostgreSQLInterface/: CMakeLists.txt  PostgreSQLInterface.cpp  PostgreSQLInterface.h
DependentExtensions/RPC3/: CMakeLists.txt  RPC3.cpp  RPC3.h  RPC3_Boost.h
DependentExtensions/Rackspace/: Rackspace2.cpp  Rackspace2.h
DependentExtensions/SQLImageBuffer/: SQLImageBuffer.vcproj  main.cpp
DependentExtensions/SQLite3Plugin/: SQLite3ClientPlugin.cpp  SQLite3ClientPlugin.h  SQLite3Plugin.vcproj  SQLite3Plugin.vcxproj  SQLite3Plugin.vcxproj.filters  SQLite3PluginCommon.cpp  SQLite3PluginCommon.h  SQLite3Sample.cpp  SQLite3ServerPlugin.cpp  SQLite3ServerPlugin.h  readme.txt  sqlite3.c  sqlite3.h  sqlite3ext.h
DependentExtensions/Swig/: MakeSwig.bat  MakeSwig.sh  MakeSwigWithExtras.bat  MakeSwigWithExtras.sh  READMEFIRST-IMPORTANT_BUILD_INSTRUCTION.txt
DependentExtensions/WinPhone8/: ThreadEmulation.cpp  ThreadEmulation.h
DependentExtensions/WinRT/: WinRTSockAddr.h  WinRTSocketAdapter.h
DependentExtensions/XML/: CMakeLists.txt  xmlParser.cpp  xmlParser.h
DependentExtensions/jpeg-7/: jccolor.c  jcparam.c  jmorecfg.h  jpeglib.h  memsrc.c
DependentExtensions/miniupnpc-1.5/: declspec.h  minisoap.c  miniwget.c
DependentExtensions/miniupnpc-1.6.20120410/: Makefile  minihttptestserver.c  miniupnpcmodule.c  miniupnpcstrings.h  minixmlvalid.c  setup.py  setupmingw32.py  testigddescparse.c  testminixml.c  upnpc.c  upnperrors.h
DependentExtensions/openssl-1.0.0d/: OpenSSLhelp.chm
DependentExtensions/portaudio_v18_1/: CMakeLists.txt  Makefile.in  Makefile.linux  Makefile.mingw  Makefile.solaris  configure  configure.in
DependentExtensions/speex-1.1.12/: AUTHORS  CMakeLists.txt  COPYING  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.blackfin  README.symbian  Speex.kdevelop  Speex.spec  Speex.spec.in  TODO  acinclude.m4  aclocal.m4  config.guess  config.h.in  config.sub  configure  configure.ac  ltmain.sh  speex.m4  speex.pc.in
Lib/: CMakeLists.txt
Lib/DLL/: CMakeLists.txt  DLL.APS  DLL.vcproj  DLL_vc8.vcproj  DLL_vc9.vcproj  DLL_vc9.vcxproj  readme.txt  resource.h
Lib/JanssonStatic/: JanssonStatic_vc9.vcproj  JanssonStatic_vc9.vcxproj
Lib/LibStatic/: CMakeLists.txt  LibStatic.vcproj  LibStatic_vc8.vcproj  LibStatic_vc9.vcproj  LibStatic_vc9.vcxproj  LibStatic_vc9.vcxproj.filters  readme.txt
Lib/MiniupnpcStatic/: MiniupnpcStatic_vc9.vcproj  MiniupnpcStatic_vc9.vcxproj
Samples/: CMakeLists.txt
Samples/AutoPatcherServer_MySQL/: AutopatcherServerTest_MySQL.cpp  AutopatcherServer_MySQL.vcproj  AutopatcherServer_MySQL.vcxproj  AutopatcherServer_MySQL.vcxproj.filters  CMakeLists.txt  readme.txt
Samples/AutopatcherClient/: AutopatcherClient.vcproj  AutopatcherClientTest.cpp  AutopatcherClient_vc8.vcproj  AutopatcherClient_vc9.vcproj  AutopatcherClient_vc9.vcxproj  AutopatcherClient_vc9.vcxproj.filters  CMakeLists.txt  Test10.bat  readme.txt
Samples/AutopatcherClientGFx3.0/: AutopatcherClientGFx3.0_vc8.vcproj  AutopatcherClientGFx3.0_vc9.vcproj  AutopatcherClientGFx3.0_vc9.vcxproj  AutopatcherClientGFx3.0_vc9.vcxproj.filters  AutopatcherClientGFx3Impl.cpp  AutopatcherClientGFx3Impl.h  CMakeLists.txt  GFxPlayerTinyD3D9.cpp  readme.txt
Samples/AutopatcherClientRestarter/: AutopatcherClientRestarter.vcproj  AutopatcherClientRestarter_vc8.vcproj  AutopatcherClientRestarter_vc9.vcproj  AutopatcherClientRestarter_vc9.vcxproj  CMakeLists.txt  main.cpp  readme.txt
Samples/AutopatcherClient_SelfScaling/: AutopatcherClientTest.cpp  AutopatcherClient_SelfScaling_vc9.vcproj  AutopatcherClient_SelfScaling_vc9.vcxproj  AutopatcherClient_SelfScaling_vc9.vcxproj.filters
Samples/AutopatcherServer/: AutopatcherServer.vcproj  AutopatcherServerTest.cpp  AutopatcherServer_vc8.vcproj  AutopatcherServer_vc9.vcproj  AutopatcherServer_vc9.vcxproj  AutopatcherServer_vc9.vcxproj.filters  CMakeLists.txt  readme.txt
Samples/AutopatcherServer_SelfScaling/: AutopatcherServer_SelfScaling_vc9.vcproj  AutopatcherServer_SelfScaling_vc9.vcxproj  main.cpp  readme.txt  (+1 more)
(+2553 files in other folders)
