cmake_minimum_required(VERSION 2.6)

option( RAKNET_SAMPLE_AutopatcherClient "" True )
#option( RAKNET_SAMPLE_AutopatcherClientGFx3_0 "" True )
option( RAKNET_SAMPLE_AutopatcherClientRestarter "" True )
option( RAKNET_SAMPLE_AutopatcherServer "" True )
option( RAKNET_SAMPLE_AutoPatcherServer_MySQL "" True )
option( RAKNET_SAMPLE_BigPacketTest "" True )
option( RAKNET_SAMPLE_BurstTest "" True )
option( RAKNET_SAMPLE_Chat_Example "" True )
option( RAKNET_SAMPLE_CloudClient "" True )
option( RAKNET_SAMPLE_CloudServer "" True )
option( RAKNET_SAMPLE_CloudTest "" True )
option( RAKNET_SAMPLE_CommandConsoleClient "" True )
option( RAKNET_SAMPLE_CommandConsoleServer "" True )
option( RAKNET_SAMPLE_ComprehensivePCGame "" True )
option( RAKNET_SAMPLE_ComprehensiveTest "" True )
#option( RAKNET_SAMPLE_CrashRelauncher "" True )
option( RAKNET_SAMPLE_CrashReporter "" True )
option( RAKNET_SAMPLE_CrossConnectionTest "" True )
option( RAKNET_SAMPLE_DirectoryDeltaTransfer "" True )
option( RAKNET_SAMPLE_Dropped_Connection_Test "" True )
option( RAKNET_SAMPLE_Encryption "" True )
option( RAKNET_SAMPLE_FCMHost "" True )
option( RAKNET_SAMPLE_FCMHostSimultaneous "" True )
option( RAKNET_SAMPLE_FCMVerifiedJoinSimultaneous "" True )
option( RAKNET_SAMPLE_FileListTransfer "" True )
option( RAKNET_SAMPLE_Flow_Control_Test "" True )
option( RAKNET_SAMPLE_Fully_Connected_Mesh "" True )
#option( RAKNET_SAMPLE_GFWL "" True )
#option( RAKNET_SAMPLE_iOS "" True )
option( RAKNET_SAMPLE_LANServerDiscovery "" True )
option( RAKNET_SAMPLE_Lobby2Client "" True )
#option( RAKNET_SAMPLE_Lobby2ClientGFx3_0 "" True )
#option( RAKNET_SAMPLE_Lobby2Client_PS3 "" True )
#option( RAKNET_SAMPLE_Lobby2Server_PGSQL "" True )
#option( RAKNET_SAMPLE_LobbyDB_PostgreSQL "" True )
#option( RAKNET_SAMPLE_LoopbackPerformanceTest "" True )
#option( RAKNET_SAMPLE_Marmalade "" True )
option( RAKNET_SAMPLE_MasterServer "" True )
option( RAKNET_SAMPLE_MessageFilter "" True )
option( RAKNET_SAMPLE_MessageSizeTest "" True )
option( RAKNET_SAMPLE_NATCompleteClient "" True )
option( RAKNET_SAMPLE_NATCompleteServer "" True )
option( RAKNET_SAMPLE_OfflineMessagesTest "" True )
option( RAKNET_SAMPLE_PacketLogger "" True )
option( RAKNET_SAMPLE_PHPDirectoryServer2 "" True )
option( RAKNET_SAMPLE_Ping "" True )
#option( RAKNET_SAMPLE_PS3 "" True )
option( RAKNET_SAMPLE_RackspaceConsole "" True )
option( RAKNET_SAMPLE_RakVoice "" True )
option( RAKNET_SAMPLE_RakVoiceDSound "" True )
option( RAKNET_SAMPLE_RakVoiceFMOD "" True )
#option( RAKNET_SAMPLE_RakVoiceFMODAsDLL "" True )
#option( RAKNET_SAMPLE_RankingServerDB "" True )
#option( RAKNET_SAMPLE_RankingServerDBTest "" True )
#option( RAKNET_SAMPLE_ReadyEvent "" True )
option( RAKNET_SAMPLE_Reliable_Ordered_Test "" True )
option( RAKNET_SAMPLE_ReplicaManager3 "" True )
#option( RAKNET_SAMPLE_Rooms "" True )
#option( RAKNET_SAMPLE_RoomsBrowserGFx3 "" True )
option( RAKNET_SAMPLE_Router2 "" True )
option( RAKNET_SAMPLE_RPC3 "" True )
option( RAKNET_SAMPLE_RPC4 "" True )
option( RAKNET_SAMPLE_SendEmail "" True )
option( RAKNET_SAMPLE_ServerClientTest2 "" True )
option( RAKNET_SAMPLE_StatisticsHistoryTest "" True )
#option( RAKNET_SAMPLE_SteamLobby "" True )
option( RAKNET_SAMPLE_TeamManager "" True )
option( RAKNET_SAMPLE_TestDLL "" True )
option( RAKNET_SAMPLE_Tests "" True )
option( RAKNET_SAMPLE_ThreadTest "" True )
option( RAKNET_SAMPLE_Timestamping "" True )
option( RAKNET_SAMPLE_TitleValidationDB_PostgreSQL "" True )
option( RAKNET_SAMPLE_TwoWayAuthentication "" True )
option( RAKNET_SAMPLE_UDPForwarder "" True )
#option( RAKNET_SAMPLE_Vita "" True )
#option( RAKNET_SAMPLE_XBOX360 "" True )

if(RAKNET_SAMPLE_AutopatcherClient)
	add_subdirectory("AutopatcherClient")
endif()
if(RAKNET_SAMPLE_AutopatcherClientGFx3_0)
	#add_subdirectory("AutopatcherClientGFx3.0")
endif()
if(RAKNET_SAMPLE_AutopatcherClientRestarter)
	add_subdirectory("AutopatcherClientRestarter")
endif()
if(RAKNET_SAMPLE_AutopatcherServer)
	add_subdirectory("AutopatcherServer")
endif()
if(RAKNET_SAMPLE_AutoPatcherServer_MySQL)
	add_subdirectory("AutoPatcherServer_MySQL")
endif()
if(RAKNET_SAMPLE_BigPacketTest)
	add_subdirectory("BigPacketTest")
endif()
if(RAKNET_SAMPLE_BurstTest)
	add_subdirectory("BurstTest")
endif()
if(RAKNET_SAMPLE_Chat_Example)
	add_subdirectory("Chat Example")
endif()
if(RAKNET_SAMPLE_CloudClient)
	add_subdirectory("CloudClient")
endif()
if(RAKNET_SAMPLE_CloudServer)
	add_subdirectory("CloudServer")
endif()
if(RAKNET_SAMPLE_CloudTest)
	add_subdirectory("CloudTest")
endif()
if(RAKNET_SAMPLE_CommandConsoleClient)
	add_subdirectory("CommandConsoleClient")
endif()
if(RAKNET_SAMPLE_CommandConsoleServer)
	add_subdirectory("CommandConsoleServer")
endif()
if(RAKNET_SAMPLE_ComprehensivePCGame)
	add_subdirectory("ComprehensivePCGame")
endif()
if(RAKNET_SAMPLE_ComprehensiveTest)
	add_subdirectory("ComprehensiveTest")
endif()
if(RAKNET_SAMPLE_CrashRelauncher)
	#add_subdirectory("CrashRelauncher")
endif()
if(RAKNET_SAMPLE_CrashReporter)
	add_subdirectory("CrashReporter")
endif()
if(RAKNET_SAMPLE_CrossConnectionTest)
	add_subdirectory("CrossConnectionTest")
endif()
if(RAKNET_SAMPLE_DirectoryDeltaTransfer)
	add_subdirectory("DirectoryDeltaTransfer")
endif()
if(RAKNET_SAMPLE_Dropped_Connection_Test)
	add_subdirectory("Dropped Connection Test")
endif()
if(RAKNET_SAMPLE_Encryption)
	add_subdirectory("Encryption")
endif()
if(RAKNET_SAMPLE_FCMHost)
	add_subdirectory("FCMHost")
endif()
if(RAKNET_SAMPLE_FCMHostSimultaneous)
	add_subdirectory("FCMHostSimultaneous")
endif()
if(RAKNET_SAMPLE_FCMVerifiedJoinSimultaneous)
	add_subdirectory("FCMVerifiedJoinSimultaneous")
endif()
if(RAKNET_SAMPLE_FileListTransfer)
	add_subdirectory("FileListTransfer")
endif()
if(RAKNET_SAMPLE_Flow_Control_Test)
	add_subdirectory("Flow Control Test")
endif()
if(RAKNET_SAMPLE_Fully_Connected_Mesh)
	add_subdirectory("Fully Connected Mesh")
endif()
if(RAKNET_SAMPLE_GFWL)
	#add_subdirectory("GFWL")
endif()
if(RAKNET_SAMPLE_iOS)
	#add_subdirectory("iOS")
endif()
if(RAKNET_SAMPLE_LANServerDiscovery)
	add_subdirectory("LANServerDiscovery")
endif()
if(RAKNET_SAMPLE_Lobby2Client)
	add_subdirectory("Lobby2Client")
endif()
if(RAKNET_SAMPLE_Lobby2ClientGFx3_0)
	#add_subdirectory("Lobby2ClientGFx3.0")
endif()
if(RAKNET_SAMPLE_Lobby2Client_PS3)
	#add_subdirectory("Lobby2Client_PS3")
endif()
if(RAKNET_SAMPLE_Lobby2Server_PGSQL)
	#add_subdirectory("Lobby2Server_PGSQL")
endif()
if(RAKNET_SAMPLE_LobbyDB_PostgreSQL)
	#add_subdirectory("LobbyDB_PostgreSQL")
endif()
if(RAKNET_SAMPLE_LoopbackPerformanceTest)
	#add_subdirectory("LoopbackPerformanceTest")
endif()
if(RAKNET_SAMPLE_Marmalade)
	#add_subdirectory("Marmalade")
endif()
if(RAKNET_SAMPLE_MasterServer)
	add_subdirectory("MasterServer")
endif()
if(RAKNET_SAMPLE_MessageFilter)
	add_subdirectory("MessageFilter")
endif()
if(RAKNET_SAMPLE_MessageSizeTest)
	add_subdirectory("MessageSizeTest")
endif()
if(RAKNET_SAMPLE_NATCompleteClient)
	add_subdirectory("NATCompleteClient")
endif()
if(RAKNET_SAMPLE_NATCompleteServer)
	add_subdirectory("NATCompleteServer")
endif()
if(RAKNET_SAMPLE_OfflineMessagesTest)
	add_subdirectory("OfflineMessagesTest")
endif()
if(RAKNET_SAMPLE_PacketLogger)
	add_subdirectory("PacketLogger")
endif()
if(RAKNET_SAMPLE_PHPDirectoryServer2)
	add_subdirectory("PHPDirectoryServer2")
endif()
if(RAKNET_SAMPLE_Ping)
	add_subdirectory("Ping")
endif()
if(RAKNET_SAMPLE_PS3)
	#add_subdirectory("PS3")
endif()
if(RAKNET_SAMPLE_RackspaceConsole)
	add_subdirectory("RackspaceConsole")
endif()
if(RAKNET_SAMPLE_RakVoice)
	add_subdirectory("RakVoice")
endif()
if(RAKNET_SAMPLE_RakVoiceDSound)
	add_subdirectory("RakVoiceDSound")
endif()
if(RAKNET_SAMPLE_RakVoiceFMOD)
	add_subdirectory("RakVoiceFMOD")
endif()
if(RAKNET_SAMPLE_RakVoiceFMODAsDLL)
	#add_subdirectory("RakVoiceFMODAsDLL")
endif()
if(RAKNET_SAMPLE_RankingServerDB)
	#add_subdirectory("RankingServerDB")
endif()
if(RAKNET_SAMPLE_RankingServerDBTest)
	#add_subdirectory("RankingServerDBTest")
endif()
if(RAKNET_SAMPLE_ReadyEvent)
	#add_subdirectory("ReadyEvent")
endif()
if(RAKNET_SAMPLE_Reliable_Ordered_Test)
	add_subdirectory("Reliable Ordered Test")
endif()
if(RAKNET_SAMPLE_ReplicaManager3)
	add_subdirectory("ReplicaManager3")
endif()
if(RAKNET_SAMPLE_Rooms)
	#add_subdirectory("Rooms")
endif()
if(RAKNET_SAMPLE_RoomsBrowserGFx3)
	#add_subdirectory("RoomsBrowserGFx3")
endif()
if(RAKNET_SAMPLE_Router2)
	add_subdirectory("Router2")
endif()
if(RAKNET_SAMPLE_RPC3)
	add_subdirectory("RPC3")
endif()
if(RAKNET_SAMPLE_RPC4)
	add_subdirectory("RPC4")
endif()
if(RAKNET_SAMPLE_SendEmail)
	add_subdirectory("SendEmail")
endif()
if(RAKNET_SAMPLE_ServerClientTest2)
	add_subdirectory("ServerClientTest2")
endif()
if(RAKNET_SAMPLE_StatisticsHistoryTest)
	add_subdirectory("StatisticsHistoryTest")
endif()
if(RAKNET_SAMPLE_SteamLobby)
	#add_subdirectory("SteamLobby")
endif()
if(RAKNET_SAMPLE_TeamManager)
	add_subdirectory("TeamManager")
endif()
if(RAKNET_SAMPLE_TestDLL)
	add_subdirectory("TestDLL")
endif()
if(RAKNET_SAMPLE_Tests)
	add_subdirectory("Tests")
endif()
if(RAKNET_SAMPLE_ThreadTest)
	add_subdirectory("ThreadTest")
endif()
if(RAKNET_SAMPLE_Timestamping)
	add_subdirectory("Timestamping")
endif()
if(RAKNET_SAMPLE_TitleValidationDB_PostgreSQL)
	add_subdirectory("TitleValidationDB_PostgreSQL")
endif()
if(RAKNET_SAMPLE_TwoWayAuthentication)
	add_subdirectory("TwoWayAuthentication")
endif()
if(RAKNET_SAMPLE_UDPForwarder)
	add_subdirectory("UDPForwarder")
endif()
if(RAKNET_SAMPLE_Vita)
	#add_subdirectory("Vita")
endif()
if(RAKNET_SAMPLE_XBOX360)
	#add_subdirectory("XBOX360")
endif()
