project(Autopatcher)
IF (UNIX AND NOT WIN32)
	FILE(GLOB ALL_HEADER_SRCS *.h)
	FILE(GLOB ALL_CPP_SRCS *.cpp)
	include_directories(${RAKNETHEADERFILES} ./ ${bzip2-1.0.3_SOURCE_DIR}) 
	add_library(LibAutopatcher STATIC ${ALL_CPP_SRCS} ${ALL_HEADER_SRCS})
	target_link_libraries (LibAutopatcher ${RAKNET_COMMON_LIBS} LibBZip2)
ENDIF(UNIX AND NOT WIN32)
IF(USEMYSQL AND NOT DISABLEDEPENDENCIES) 
	add_subdirectory(AutopatcherMySQLRepository)
ENDIF(USEMYSQL AND NOT DISABLEDEPENDENCIES)
IF(USEPOSTGRESQL AND NOT DISABLEDEPENDENCIES)
add_subdirectory(AutopatcherPostgreRepository)
ENDIF(USEPOSTGRESQL AND NOT DISABLEDEPENDENCIES)
 
